# NN-Racing

./: .gitignore  CMakeLists.txt  README.md  Track.png.import  init.ps1  track_data.txt
python_env/: gaame.py  game.py
src_cpp/: binding.cpp  matrix.cpp  matrix.h  neural_net.cpp  neural_net.h  test.cpp
